--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -8,6 +8,7 @@ server {
 
     # Serve index.html for the root path
     location / {
+        default_type "text/html";
         try_files $uri $uri/ /index.html;
     }
 
