--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -12,6 +12,14 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location  /api/v1 {
+        proxy_pass http://localhost:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # You may need this to prevent return 404 recursion.
     location = /404.html {
         internal;
